--- a/two-speakers-overlay/index.html
+++ b/two-speakers-overlay/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <nav>
-      <a href="/">Back to All Generators</a>
+      <a href="/stream-overlay-generator/">Back to All Generators</a>
     </nav>
     <h1>Two Speakers Overlay Generator
 
