--- a/side-by-side-overlay--4-speakers/index.html
+++ b/side-by-side-overlay--4-speakers/index.html
@@ -31,10 +31,10 @@
     <nav>
       <a href="/stream-overlay-generator/">Back to All Generators</a>
     </nav>
-    <h1>Single Speaker Overlay Generator
+    <h1>Side by Side - 4 Speakers Overlay Generator
 
     
-      <img class="streamyard-icon" src="/stream-overlay-generator/images/streamyard/single-speaker.png"></img>
+      <img class="streamyard-icon" src="/stream-overlay-generator/images/streamyard/side-by-side.png"></img>
     
     </h1>
 
@@ -164,7 +164,7 @@
       $(document).ready(function() {
         Overlay = {}
         Overlay.path = "/stream-overlay-generator/images/overlays/big.svg"
-        let speakerJSON = [{"id":1,"name":{"text":"Speaker (she/her)","font-and-size":"40px Comfortaa","x":"40","y":"685"},"twitter":{"text":"@speaker","font-and-size":"30px Comfortaa","x":"900","y":"680"},"overlay":{"x":"0","y":"620","width":"1280","height":"100"}}];
+        let speakerJSON = [{"id":1,"name":{"text":"First Speaker (she/her)","font-and-size":"18px Comfortaa","x":"15","y":"350"},"twitter":{"text":"@1st-speaker","font-and-size":"16px Comfortaa","x":"510","y":"350"},"overlay":{"x":"0","y":"320","width":"638","height":"50"}},{"id":2,"name":{"text":"Second Speaker (they/them)","font-and-size":"18px Comfortaa","x":"655","y":"350"},"twitter":{"text":"@2nd-speaker","font-and-size":"16px Comfortaa","x":"1140","y":"350"},"overlay":{"x":"642","y":"320","width":"638","height":"50"}},{"id":3,"name":{"text":"Third Speaker (he/him)","font-and-size":"18px Comfortaa","x":"15","y":"702"},"twitter":{"text":"@3rd-speaker","font-and-size":"16px Comfortaa","x":"510","y":"700"},"overlay":{"x":"0","y":"670","width":"638","height":"50"}},{"id":4,"name":{"text":"Fourth Speaker (she/her)","font-and-size":"18px Comfortaa","x":"655","y":"702"},"twitter":{"text":"@4th-speaker","font-and-size":"16px Comfortaa","x":"1140","y":"700"},"overlay":{"x":"642","y":"670","width":"638","height":"50"}}];
         let speakersList = new SpeakersList(speakerJSON);
         let overlaysView = new OverlaysView(speakersList);
         let formView = new FormView(speakersList);
