--- a/large-speaker-and-screen/index.html
+++ b/large-speaker-and-screen/index.html
@@ -31,10 +31,10 @@
     <nav>
       <a href="/stream-overlay-generator/">Back to All Generators</a>
     </nav>
-    <h1>In Set - 4 Speakers Overlay Generator
+    <h1>Large Speaker and Screen Overlay Generator
 
     
-      <img class="streamyard-icon" src="/stream-overlay-generator/images/streamyard/in-set.png"></img>
+      <img class="streamyard-icon" src="/stream-overlay-generator/images/streamyard/large-speaker-and-screen.png"></img>
     
     </h1>
 
@@ -164,7 +164,7 @@
       $(document).ready(function() {
         Overlay = {}
         Overlay.path = "/stream-overlay-generator/images/overlays/big.svg"
-        let speakerJSON = [{"id":1,"name":{"text":"First Speaker (she/her)","font-and-size":"18px Comfortaa","x":"40","y":"345"},"twitter":{"text":"@1st-speaker","font-and-size":"14px Comfortaa","x":"520","y":"345"},"overlay":{"x":"25","y":"320","width":"605","height":"40"}},{"id":2,"name":{"text":"Second Speaker (they/them)","font-and-size":"18px Comfortaa","x":"665","y":"345"},"twitter":{"text":"@2nd-speaker","font-and-size":"14px Comfortaa","x":"1140","y":"345"},"overlay":{"x":"653","y":"320","width":"605","height":"40"}},{"id":3,"name":{"text":"Third Speaker (he/him)","font-and-size":"18px Comfortaa","x":"40","y":"702"},"twitter":{"text":"@3rd-speaker","font-and-size":"14px Comfortaa","x":"520","y":"700"},"overlay":{"x":"25","y":"675","width":"605","height":"40"}},{"id":4,"name":{"text":"Fourth Speaker (she/her)","font-and-size":"18px Comfortaa","x":"665","y":"702"},"twitter":{"text":"@4th-speaker","font-and-size":"14px Comfortaa","x":"1140","y":"700"},"overlay":{"x":"653","y":"675","width":"605","height":"40"}}];
+        let speakerJSON = [{"id":1,"name":{"text":"Speaker (she/her)","font-and-size":"30px Comfortaa","x":"20","y":"693"},"twitter":{"text":"@speaker","font-and-size":"25px Comfortaa","x":"668","y":"693"},"overlay":{"x":"0","y":"645","width":"820","height":"75"}}];
         let speakersList = new SpeakersList(speakerJSON);
         let overlaysView = new OverlaysView(speakersList);
         let formView = new FormView(speakersList);
